tests/compile_fail/mul/union.rs
#[derive(derive_more::Mul)]
union IntOrFloat {
    i: u32,
}

fn main() {}
