tests/compile_fail/mul/union.stderr
error: `Mul` cannot be derived for unions
 --> tests/compile_fail/mul/union.rs:2:1
  |
2 | union IntOrFloat {
  | ^^^^^
